# htmx-pg

./: Cargo.toml  README.md
src/: main.rs  templates.rs
src/components/: index.hbs  mod.rs  name_form.hbs
static/: index.css
templates/: count_button.html  edit-item.html  index.html  item-count.html  todo-item.html  todo-list.html
