[package]
name = "htmx-pg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-session = {version = "0.7.2", features = ["cookie-session"]}
actix-web = "4"
askama = "0.12.0"
env_logger = "0.10.0"
handlebars = "4.3.7"
leptos = "0.4.10"
log = "0.4.20"
redis = "0.23.2"
serde = "1.0.186"
serde_json = "1.0.105"
serde_urlencoded = "0.7.1"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
